--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,10 @@
-<h2 id="title">Welcome to Ember</h2>
+<nav>
+  <div class="nav-wrapper">
+    <a href="#" class="brand-logo">Question Master</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li>{{#link-to 'index'}}Home{{/link-to}}</li>
+    </ul>
+  </div>
+</nav>
 
 {{outlet}}
