add crud functionality

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav-wrapper">
-    <a href="#" class="brand-logo">Question Master</a>
+    <a href="localhost:4200" class="brand-logo">Question Master</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li>{{#link-to 'index'}}Home{{/link-to}}</li>
     </ul>
