--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,8 +3,10 @@
 
   <ul>
     {{#each model as |question|}}
-       <li>{{question.question}} | {{question.author}} | {{question.notes}}</li>
+       {{question-tile question=question update="update" destroyQuestion="destroyQuestion"}}
     {{/each}}
   </ul>
+
+  {{new-question saveQuestion2="saveQuestion3"}}
 
 </div>
