move crud functionaltiy and detail to another route

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -1,1 +1,7 @@
-{{yield}}
+Question details
+
+<h6>{{question.problem}}</h6>
+<p>
+  {{question.notes}}
+</p>
+<button {{action 'delete' question}} class="btn">Delete</button>
