--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
 
   <ul>
     {{#each model as |question|}}
-       {{question-tile question=question update="update" destroyQuestion="destroyQuestion"}}
+       {{question-tile question=question}}
     {{/each}}
   </ul>
 
