add specific answer to question in detail route

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -4,4 +4,13 @@ Question details
 <p>
   {{question.notes}}
 </p>
+
+
 <button {{action 'delete' question}} class="btn">Delete</button>
+
+<h2> Answers </h2>
+<ul>
+  {{#each question.answers as |answer|}}
+  {{answer-tile answer=answer}}
+  {{/each}}
+</ul>
