--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -7,12 +7,12 @@
         {{input value=author id="author" placeholder=question.author}}
       </div>
       <div class="form-group">
-        <label for="notes">Enter Notes(if needed):</label>
-        {{input value=notes id="notes" placeholder=question.notes}}
+        <label for="problem">Enter Problem:</label>
+        {{input value=problem id="problem" placeholder=question.problem}}
       </div>
       <div class="form-group">
-        <label for="problem">Enter Notes(if needed):</label>
-        {{input value=problem id="problem" placeholder=question.problem}}
+        <label for="notes">Enter Notes(if needed):</label>
+        {{input value=notes id="notes" placeholder=question.notes}}
       </div>
       <button {{action 'update' question}} class="btn">Save</button>
     </form>
